k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stackgres
  labels:
    app.kubernetes.io/name: sg-erm
    app.kubernetes.io/part-of: stackgres
