k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sg-erm
  namespace: stackgres
  labels:
    app.kubernetes.io/name: sg-erm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sg-erm
  ports:
    - name: http
      port: 18070
      targetPort: http
      protocol: TCP
